--- a/index.html
+++ b/index.html
@@ -98,7 +98,7 @@
 
         .hero-text h2 {
             font-size: 3.5rem;
-            margin-bottom: 1rem;
+            margin-bottom: 3rem;
         }
 
         .hero-text p {
@@ -294,6 +294,10 @@
                 padding: 1rem;
                 flex-direction: column;
                 text-align: center;
+            }
+
+            .hero-text h2 {
+            margin-top: 30px;
             }
 
             .nav-links.active {
